force-app/main/default/objects/LLC_BI__Account_Covenant__c/LLC_BI__Account_Covenant__c.object-meta.xml
<CustomObject>
    <description>This is the junction object between Covenants and Accounts.</description>
    <label>Account Covenant</label>
    <nameField>
        <displayFormat>COV-{0000}</displayFormat>
        <label>Covenant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Covenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>