force-app/main/default/objects/LLC_BI__Account_Covenant__c/fields/LLC_BI__Contact__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It is manually populated. It identifies the contact associated with the Account Covenant record.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Account_Covenants</relationshipName>
    <type>Lookup</type>
</CustomField>