force-app/main/default/objects/LLC_BI__Account_Covenant__c/fields/LLC_BI__Covenant2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant2__c</fullName>
    <description>This field is required and is automatically populated. It identifies the Covenant Mgmt record associated with the Account Covenant record and is automatically populated when creating a new Account Covenant.</description>
    <label>Covenant</label>
    <referenceTo>LLC_BI__Covenant2__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Account_Covenants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>